option(
  'build_srpm',
  type: 'boolean',
  value: false,
  description: 'Enable SRPM builds',
)
option(
  'gobuildflags',
  type: 'array',
  value: ['-buildmode', 'pie'],
  description: 'Additional build flags to be passed to the Go compiler',
)
option(
  'goldflags',
  type: 'string',
  value: '',
  description: 'Additional linker flags to be passed to the Go compiler',
)
option(
  'vendor',
  type: 'boolean',
  value: false,
  description: 'Bundle go module dependencies in the vendor directory',
)
